add dev environment

--- a/src/pages/proposal-detail/index.less
+++ b/src/pages/proposal-detail/index.less
@@ -1,7 +1,6 @@
 .proposal-detail-page {
   color: #FFFFFF;
   min-height: 100%;
-  padding: 20px;
 
   .form-proposal-detail {
     position: relative;
@@ -27,6 +26,8 @@
       flex-direction: column;
       min-height: 500px;
       justify-content: space-between;
+      max-height: 505px;
+      overflow: scroll;
 
       .icon-header-form {
         width: 210px;
