--- a/src/pages/delegate/index.less
+++ b/src/pages/delegate/index.less
@@ -1,11 +1,11 @@
 .delegate-page {
   color: #FFFFFF;
   min-height: 100%;
-  padding: 20px;
 
   .form-delegate {
     position: relative;
     width: 500px;
+    height: 500px;
     margin: 20px auto;
 
     .bg-pending-proposals {
