--- a/src/components/basic/button.less
+++ b/src/components/basic/button.less
@@ -23,15 +23,14 @@
     background-image: url('../../assets/btn-normal.png');
     background-repeat: no-repeat;
     background-origin: padding-box;
-    background-size: 100%;
   }
 
-  &:focus, &:active {
+  &:focus,
+  &:active {
     background: none;
     background-image: url('../../assets/btn-normal.png');
     background-repeat: no-repeat;
     background-origin: padding-box;
-    background-size: 100%;
   }
 
   &.ant-btn[disabled]:hover {
@@ -75,7 +74,8 @@
     background-size: 100%;
   }
 
-  &:focus, &:active {
+  &:focus,
+  &:active {
     background: none;
     background-image: url('../../assets/btn-default.png');
     background-repeat: no-repeat;
