--- a/src/pages/pending-proposals/index.less
+++ b/src/pages/pending-proposals/index.less
@@ -53,7 +53,8 @@
 
       .content-stake {
         padding: 10px;
-        height: 100%;
+        height: 540px;
+        overflow: scroll;
       }
 
       .title {
@@ -73,7 +74,8 @@
 
   .proposal-pending-item {
     text-align: initial;
-    border-top: 1px solid rgba(136, 129, 113, 0.5);;
+    border-top: 1px solid rgba(136, 129, 113, 0.5);
+    ;
     padding: 3px 0;
 
     &:first-child {
@@ -124,6 +126,7 @@
 
           &:first-child {
             background: rgb(239, 205, 100, 0.4);
+            height: 50%;
           }
 
           span:last-child {
