--- a/src/pages/submit-proposals/index.less
+++ b/src/pages/submit-proposals/index.less
@@ -5,7 +5,7 @@
   .form-submit {
     position: relative;
     width: 500px;
-    height: 500px;
+    height: 600px;
     margin: 20px auto;
     overflow: auto;
 
@@ -29,7 +29,7 @@
       height: 100%;
       justify-content: space-between;
       overflow: scroll;
-      max-height: 505px;
+      max-height: 600px;
 
       .icon-header-form {
         width: 210px;
@@ -137,7 +137,10 @@
     }
   }
 
-  .ant-form-item-has-error :not(.ant-input-disabled):not(.ant-input-borderless).ant-input, .ant-form-item-has-error :not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper, .ant-form-item-has-error :not(.ant-input-disabled):not(.ant-input-borderless).ant-input:hover, .ant-form-item-has-error :not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper:hover {
+  .ant-form-item-has-error :not(.ant-input-disabled):not(.ant-input-borderless).ant-input,
+  .ant-form-item-has-error :not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper,
+  .ant-form-item-has-error :not(.ant-input-disabled):not(.ant-input-borderless).ant-input:hover,
+  .ant-form-item-has-error :not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper:hover {
     background: none;
   }
 }
